прошли обучение, проект торжн=ественно закрыт

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stysheet" href="css/style.css">
-   <title>Document</title>
+   <link rel="stylesheet" href="css/style.css">
+   <title>CSS opacity</title>
 </head>
 
 <body>
-   
-
+   <div class="example-block">Блочный тэг <br />Nisl omittam complectitur pro an, quem omnes munere id vix. Eam id posse
+      dictas voluptua,
+      veniam laoreet oportere no mea, quis regione suscipiantur mea an. Solum vituperata definitiones te vis, vis alia
+      falli doming ea.</div>
+   <span class="example-string">Строчный тэ<br />Nisl omittam complectitur pro an, quem omnes munere id vix. Eam id
+      posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an. Solum vituperata
+      definitiones te vis, vis alia falli doming ea.</span>
+   <p>
+      <img class="example-image" src="img/youtube.png" alt="icon youtube">
+   </p>
 </body>
 
 </html>
